removed Nav Hover, Changed logout icon

--- a/classrooms.html
+++ b/classrooms.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="src/design/custom.css">
 </head>
 
-<body>
+<body class="white">
     <header>
         <nav class="nav-extended nav-fixed materialize-indigo">
             <div class="nav-wrapper">
@@ -33,7 +33,7 @@
                 </ul>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li>
-                        <a class="waves-effect waves-light btn-small transparent"><i class="material-icons left">arrow_drop_down</i>logout</a>
+                        <a href="index.html" class="waves-effect waves-light"><i class="material-icons left">power_settings_new</i>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -48,8 +48,8 @@
             <li><a target="_blank" class="title" href="registration.html">Registration</a></li>
         </ul>
     </header>
-    <div id="load" class="progress yellow darken-1">
-        <div class="indeterminate blue"></div>
+    <div id="load" class="progress blue lighten-4">
+        <div class="indeterminate blue darken-4"></div>
     </div>
     <div id="contents">
         <div id="test1" class="col s12 tabDivs">
