fixed table copying onNewRowAdd

--- a/classrooms.html
+++ b/classrooms.html
@@ -26,7 +26,7 @@
                 <a href="#" class="sidenav-trigger" data-target="mobile-nav">
                     <i class="material-icons">menu</i>
                 </a>
-                <ul class="tabs tabs-transparent">
+                <ul id="navtabs" class="tabs tabs-transparent">
                     <li class="tab"><a class="active" href="#test1">Notices</a></li>
                     <li class="tab"><a  href="#test2">Lab-Works</a></li>
                     <li class="tab"><a  href="#test4">People</a></li>
@@ -157,10 +157,10 @@
 
                                             <tbody id="exp01TBody">
                                                 <tr>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
                                                 </tr>
                                             </tbody>
                                         </table><br>
@@ -206,13 +206,13 @@
                                                         <p> <label> <input value="1" name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপের বেশী</span> </label> </p>
                                                         <p> <label> <input value="2" name="group1" type="radio" /> <span>বায়ু মন্ডলের চাপের কম</span> </label> </p>
                                                     </td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
-                                                    <td contenteditable>0</td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
+                                                    <td contenteditable></td>
                                                 </tr>
                                             </tbody>
                                         </table><br>
