fixed login page design

--- a/classrooms.html
+++ b/classrooms.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="nav-extended nav-fixed materialize-indigo">
             <div class="nav-wrapper">
-                <a class="brand-logo" id="page-logo">
+                <a class="brand-logo" id="page-logo" href="index.html">
                     <i class="material-icons" id="page-logo-icon">brightness_7</i> eLuminous
                 </a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-nav">
